# thinfat32

./: CMakeLists.txt  Makefile
scripts/: makefs
src/: device.c  fat32.c  fat32_ui.c  fuse.c  fusequark.c  quark.c  tests.c  thinfat32.c
src/include/: device.h  fat32.h  fat32_ui.h  quark.h  thinfat32.h  thinternal.h
